istio-manifest/global-mtls-dr.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
   name: "default"
   namespace: "istio-system"
spec:
   host: "*.local"
   trafficPolicy:
      tls:
         mode: ISTIO_MUTUAL
